Changes from jTDS 0.9.1
=======================

01/17/2005 - Alin Sinpalean
 o Updated typemap.html to reflect the mapping of IMAGE to BLOB and TEXT/NTEXT
   to CLOB.
 o Added BLOB and CLOB information to JtdsDatabaseMetaData.supportsConvert().

01/14/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1101251] SSL Connection Problem.
 o Added README.SSL to the build, updated FAQ and feature matrix.
 o Added "ssl" property to the DataSource.

01/13/2005 - Alin Sinpalean
 o Added readme for SSL.
 o Added logging to MSSqlServerInfo if an exception occurs.

01/10/2005 - Alin Sinpalean
 o Optimization in Support.substituteParamMarkers(): a StringBuffer is used for
   converting parameter numbers to strings, in order to avoid unnecessary
   object creation.
 o Corrected a problem in TdsCore where the inBatch flag was set incorrectly
   causing sp_executesql to be used for all parameterized queries.
 o Added a specific error message for the case when an output parameter value
   is accessed without registerOutParameter() being called first.

01/05/2005 - Alin Sinpalean
 o Applied patch [1096296] DatabaseMetaData.getTypeInfo() ordering, submitted
   by David Eaves.
 o Applied Mike's fix to bug [1096086] Zero length streams generate null
   values.

01/04/2005 - Alin Sinpalean
 o Applied patch [1089891] Adding SSL, from Rob Worsnop. Wasn't able to test
   whether SSL really works (because I was not able to configure SQL Server to
   handle it) but with a few minor changes at least the old functionality is
   not affected.
 o Applied patch [1095057] Positioned updates and improved Sybase cursors.
 o Applied Mike's fix to bug [1094621] Decimal conversion error.
 o Some performance improvements.

12/21/2004 - Alin Sinpalean
 o Included the SSO patch in the build.

12/20/2004 - Alin Sinpalean
 o Fixed bug [1086477] RETURN_GENERATED_KEYS on select returns 1 row.
 o Applied patch [1088293] Simplified multi threaded execution with a few minor