@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>jTDS Project Home</title>
+<title>jTDS JDBC Driver</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Keywords" content="jTDS, open source, free JDBC driver, free driver, free, JDBC, JDBC 2.0, JDBC 3.0, driver, type 4, pure Java, SQL Server, Sybase, SQL Server 6.5, SQL Server 7.0, SQL Server 2000, SQL Server 2005, SourceForge">
 <link rel="stylesheet" href="style.css" type="text/css">
